# job360

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CurrentStatus.md  DEADCODE.md  Makefile  README.md  RULES.md  References.md  SOURCES.md  STATUS.md  STREAMLIT_DELETE.md  TESTING.md  cron_setup.sh  joproviderlayerReport.md  planning_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.claude/: settings.local.json  step-1-5-verified.txt  step-1-verified.txt
.github/workflows/: tests.yml
backend/: pyproject.toml
backend/migrations/: 0000_baseline.down.sql  0000_baseline.up.sql  0002_multi_tenant.down.sql  0002_multi_tenant.up.sql  0003_user_feed.down.sql  0003_user_feed.up.sql  0006_user_profiles.down.sql  0006_user_profiles.up.sql  0009_job_embeddings.down.sql  0009_job_embeddings.up.sql  0012_notification_rules.down.sql  0012_notification_rules.up.sql  0013_user_notification_digests.down.sql  0013_user_notification_digests.up.sql  0014_application_history.down.sql  0014_application_history.up.sql  __init__.py  runner.py
backend/ops/: exporter.py  grafana_dashboard.json
backend/scripts/: measure_date_reliability.py
backend/src/: cli.py  cli_view.py  dashboard.py  main.py  models.py
backend/src/api/: auth_deps.py  dependencies.py  main.py  models.py
backend/src/api/routes/: actions.py  auth.py  channels.py  health.py  jobs.py  notification_rules.py  notifications.py  pipeline.py  profile.py  runs.py  search.py
backend/src/core/: companies.py  fx.py  keywords.py  settings.py  skill_synonyms.py  tenancy.py
backend/src/repositories/: csv_export.py  database.py
backend/src/services/: circuit_breaker.py  conditional_cache.py  deduplicator.py  embeddings.py  feed.py  ghost_detection.py  job_enrichment.py  prefilter.py  retrieval.py  salary.py  scheduler.py  scoring_dimensions.py  skill_matcher.py  vector_index.py
backend/src/services/channels/: dispatcher.py
backend/src/services/notifications/: base.py  discord_notify.py  email_notify.py  report_generator.py  slack_notify.py
backend/src/services/profile/: cv_parser.py  dep_file_parser.py  dependency_map.py  github_enricher.py  keyword_generator.py  linkedin_parser.py  llm_provider.py  models.py  preferences.py  schemas.py  skill_entry.py  skill_normalizer.py  storage.py
backend/src/sources/: base.py
backend/src/sources/apis_free/: aijobs.py  arbeitnow.py  devitjobs.py  gov_apprenticeships.py  himalayas.py  hn_jobs.py  jobicy.py  landingjobs.py  remoteok.py  remotive.py  teaching_vacancies.py  yc_companies.py
backend/src/sources/apis_keyed/: adzuna.py  careerjet.py  findwork.py  google_jobs.py  jooble.py  jsearch.py  reed.py
backend/src/sources/ats/: ashby.py  comeet.py  greenhouse.py  lever.py  personio.py  pinpoint.py  recruitee.py  rippling.py  smartrecruiters.py  successfactors.py  workable.py  workday.py
backend/src/sources/feeds/: biospace.py  findajob.py  jobs_ac_uk.py  nhs_jobs.py  nhs_jobs_xml.py  realworkfromanywhere.py  uni_jobs.py  weworkremotely.py  workanywhere.py
backend/src/sources/other/: hackernews.py  indeed.py  nofluffjobs.py  nomis.py  themuse.py
backend/src/sources/scrapers/: aijobs_ai.py  aijobs_global.py  bcs_jobs.py  climatebase.py  eightykhours.py  jobtensor.py  linkedin.py
backend/src/utils/: logger.py  telemetry.py  time_buckets.py
backend/src/workers/: settings.py  tasks.py
backend/tests/: conftest.py  test_account_mgmt.py  test_api.py  test_api_idor.py  test_auth_routes.py  test_channels_dispatcher.py  test_channels_routes.py  test_circuit_breaker.py  test_cli.py  test_conditional_fetch.py  test_cron.py  test_csv_export.py  test_database.py  test_date_schema.py  test_deduplicator.py  test_discovery.py  test_domain_classifier.py  test_embeddings.py  test_feed_service.py  test_ghost_detection.py  test_ghost_sweep.py  test_github_deps.py  test_job_enrichment.py  test_kpi_exporter.py  test_linkedin_github.py  test_llm_provider.py  test_main.py  test_main_scheduler_wiring.py  test_migrations.py  test_models.py  test_notification_base.py  test_notification_rules.py  test_notifications.py  test_notifications_endpoint.py  test_pipeline_timeline.py  test_prefilter.py  test_profile.py  test_profile_storage.py  test_profile_versions_endpoint.py  test_reports.py  (+18 more)
docs/: CurrentStatus.md  ExecutionOrder.md  IMPLEMENTATION_LOG.md  References.md  pillar2_progress.md  step_zero_plan.md
docs/plans/: batch-1-plan.md  batch-2-decisions.md  batch-3.5-plan.md  batch-3.5.1-plan.md  batch-3.5.2-plan.md  batch-3.5.3-plan.md  batch-3.5.3-preflight.md  batch-3.5.4-investigation.md  batch-3.5.4-plan.md
docs/reviews/: batch-1-review.md  batch-2-review.md  batch-3-review.md  batch-3.5-review.md  step-1-cohort-A-review.md  step-1-cohort-B-review.md  step-1-cohort-C-review.md  step-1-cohort-D-review.md
frontend/: .env.local.example  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  (+2 more)
scripts/: build_job_embeddings.py  internal_restructure.py  migration_roundtrip.sh  preflight_conditional_cache.py  review_batch.sh  split_sources_by_category.py  update_planning_report_paths.py  validate_rules.py
src/: cli.py  cli_view.py  cv_parser.py  dashboard.py  diagnostics.py  exceptions.py  main.py  models.py
tests/: conftest.py  qa_runner.py  test_api.py  test_cli.py  test_cli_view.py  test_cron.py  test_csv_export.py  test_cv_parser.py  test_cv_structured_parser.py  test_cv_summarizer.py  test_dashboard.py  test_dashboard_upload.py  test_database.py  test_deduplicator.py  test_description_matcher.py  test_diagnostics.py  test_domain_detector.py  test_embeddings.py  test_feedback.py  test_hybrid_retriever.py  test_jd_parser.py  test_linkedin_github.py  test_llm_cache.py  test_llm_client.py  test_llm_jd_enricher.py  test_llm_provider.py  test_llm_providers.py  test_main.py  test_models.py  test_notification_base.py  test_notifications.py  test_pipeline.py  test_profile.py  test_reports.py  test_reranker.py  test_scorer.py  test_setup.py  test_skill_graph.py  test_sources.py  test_time_buckets.py  (+2 more)
(+204 files in other folders)
