[project]
name = "job360"
version = "1.0.0"
description = "Automated UK job search system supporting any professional domain"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "pandas>=2.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "rich>=13.0.0",
    "humanize>=4.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "google-generativeai>=0.8.0",
    "groq>=0.11.0",
    "cerebras-cloud-sdk>=1.0.0",
    # Batch 2 — multi-user delivery layer (auth, channels, notifications).
    "argon2-cffi>=23.1.0",          # password hashing (argon2id, OWASP-recommended)
    "itsdangerous>=2.2.0",          # signed session cookies
    "apprise>=1.7.0",               # multi-channel notification sending
    "email-validator>=2.1.0",       # pydantic EmailStr (via pydantic[email])
    "cryptography>=42.0.0",         # Fernet for user_channels credential storage
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.0",
    "fpdf2>=2.7.0",
    # Batch 3.5.4 — test-order flake hunter. Loaded on demand via
    # `pytest -p randomly --randomly-seed=<n>`; do NOT enable by
    # default. Default CI runs use `-p no:randomly` to preserve
    # deterministic ordering for the green-baseline contract. Use
    # during cleanup batches only, once a run shows 0f across N
    # seeds it's safe to flip CI over.
    "pytest-randomly>=4.0",
]
indeed = [
    "python-jobspy",
]

[project.scripts]
job360 = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
# Batch 3.5.4 — disable pytest-randomly by default. When the plugin
# is installed (dev dep) it auto-activates; the CI contract is
# "deterministic green baseline", so we opt out unless the developer
# explicitly enables it via `pytest -p randomly ...` during a
# flake-hunt session.
addopts = "-p no:randomly"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "G"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
